removed bind to see if that resolves high vulnerability reported by clair in quay.io

--- a/consul-centos/Dockerfile
+++ b/consul-centos/Dockerfile
@@ -11,6 +11,8 @@ RUN yum update -y && \
     yum install -y \
       unzip \
       && \
+    yum uninstall \
+      bind && \
     yum clean all
 
 # Download Consul/Web-UI
